# wardriver-drone

./: .gitignore  README.md  push.sh
examples/dvp_dsi/: CMakeLists.txt  README.md  pytest_dvp_dsi.py  sdkconfig.defaults  sdkconfig.defaults.esp32p4
examples/dvp_dsi/main/: CMakeLists.txt  Kconfig.projbuild  dvp_dsi_main.c  (+2 more)
examples/dvp_isp_dsi/: CMakeLists.txt  README.md  pytest_dvp_isp_dsi.py  sdkconfig.defaults  sdkconfig.defaults.esp32p4
examples/esp_driver_sdmmc/: CMakeLists.txt  Kconfig
examples/nmea0183_parser/: CMakeLists.txt  README.md  sdkconfig
examples/sdmmc/: pytest_sdmmc_card_example.py
examples/wifi/: .build-test-rules.yml  README.md
required_esp_components/src/: list_ports.c
src/: list_boards  list_boards.c  list_ports
src/802dot11/: CMakeLists.txt  sdkconfig
src/app/: CMakeLists.txt  ap.py  app.py  dji_flight_path.py  init.sh  requirements.txt  sdcard.py  sdkconfig  sdkconfig.old  trilateration.py
src/app/main/: CMakeLists.txt  Kconfig.projbuild  main.c  scanner.c  sdcard_main.c
src/ble_scan/: sdkconfig  sdkconfig.old
src/camera/: CMakeLists.txt  sdkconfig  sdkconfig.old
src/gps/: CMakeLists.txt
src/scanner/: CMakeLists.txt  README.md  sdkconfig
src/sdcard/: README.md  sdkconfig  sdkconfig.old
src/ui/: dashboard.html  init.sh
ui/: server.py
wardriver-drone-KB/: esp_wifi component.md
wardriver-drone-KB/.obsidian/: workspace.json
webapp/: ap.py  dashboard.html  dashboard_app.py  menu.py  parser.py  requiremtns.txt  sample.py  sample_wifi_with_gps_200rows.csv  sdcard.py  server.py
webapp/instance/: menu.py
(+208 files in other folders)
